deployments/learning-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-api
spec:
  selector:
    matchLabels:
      app: learning-api
  template:
    metadata:
      labels:
        app: learning-api
    spec:
      containers:
        - name: learning-api
          image: jeffrygonzalez/learning-resource-api:v0.1
          ports:
            - containerPort: 80
