deployments/learning-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-api-service
spec:
  selector:
    app: learning-api
  ports:
    - port: 80
      targetPort: 80
